# Quickcart-AI-

./: README.md  main.py  pyproject.toml  quickcart.db
backend/: .env  quickcart.db  requirements.txt
backend/ai/: inventory_predictor.py
backend/app/: config.py  database.py  main.py
backend/app/cache/: redis_cache.py
backend/app/models/: cart.py  order.py  product.py
backend/app/routers/: __init__.py  auth_router.py  cart_router.py  dashboard_router.py  order_router.py  payment_router.py  product_router.py
backend/app/services/: auth_service.py  cart_service.py  order_service.py  product_service.py
backend/cache/: redis_cache.py
backend/models/: order.py  product.py
backend/routers/: payment_router.py
backend/services/: gemini_service.py  order_service.py  payment_service.py  product_service.py
frontend/: billing.html  checkout.html  dashboard.html  index.html  payment.html  receipt.html  scanner.html  signin.html
frontend/js/: api.js  payment.js  scanner.js
