[project]
name = "quickcart-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "google-generativeai>=0.8.6",
    "pandas>=3.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "razorpay>=2.0.0",
    "redis>=7.2.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
